--- a/eks.yaml
+++ b/eks.yaml
@@ -2,7 +2,7 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: roboshop
+  name: robo
   region: us-east-1
 
 managedNodeGroups:
